2015-01-21  Csaba Osztrogonác  <ossy@webkit.org>

        Remove ENABLE(INSPECTOR) ifdef guards
        https://bugs.webkit.org/show_bug.cgi?id=140668

        Reviewed by Darin Adler.

        * DumpRenderTree/mac/TestRunnerMac.mm:
        (TestRunner::showWebInspector):
        (TestRunner::closeWebInspector):
        (TestRunner::evaluateInWebInspector):
        * Scripts/webkitperl/FeatureList.pm:
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        (WTR::TestRunner::showWebInspector):
        (WTR::TestRunner::closeWebInspector):
        (WTR::TestRunner::evaluateInWebInspector):
        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::invoke):

2015-01-20  Alexey Proskuryakov  <ap@apple.com>

        Update build.webkit.org/dashboard to match current Mac queues.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Images/Lion.png: Removed.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Images/Lion@2x.png: Removed.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Images/MountainLion.png: Removed.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Images/MountainLion@2x.png: Removed.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/Dashboard.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Styles/Main.css:
        (table.queue-grid tr.platform.mac-os-x-mountain-lion img.logo): Deleted.
        (table.queue-grid tr.platform.mac-os-x-lion img.logo): Deleted.

2015-01-20  Lucas Forschler  <lforschler@apple.com>

        Update Apple MountainLion Leaks slave to Yosemite
        Update Apple MountainLion Release (32-bit) Build slave to Yosemite
        
        Unreviewed.

        * BuildSlaveSupport/build.webkit.org-config/config.json:
